fix: scss. horizontal scrolling

--- a/fancy-weather/src/sass/controls.scss
+++ b/fancy-weather/src/sass/controls.scss
@@ -114,7 +114,7 @@
         }
 
         &--input {
-            width: 260px;
+            width: 100%;
             height: 44px;
             padding-left: 20px;
 
